# tutor-rag-python

./: .gitignore  README.md  metadata.json  package.json  pyproject.toml
corpus/: ciclos_for.md  condicionais.md  erros_indentacao.md  operadores_comparacao.md  testes_funcionais.md  variaveis.md
data/chroma/: chroma.sqlite3
src/: app.py  config.py  generator.py  ingest.py  prompts.py  retriever.py
