[project]
name = "rag-python-tutor"
version = "0.1.0"
description = "Chatbot educacional RAG para apoio a estudantes de Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.31.0",
    "chromadb>=0.4.24",
    "sentence-transformers>=2.5.1",
    "ollama>=0.1.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.0.0",
    "torchvision>=0.26.0",
]

[tool.uv]
managed = true
