[project]
name = "rag-python-tutor"
version = "0.1.0"
description = "Chatbot educacional RAG para apoio a estudantes de Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.57.0",
    "chromadb>=1.5.9",
    "sentence-transformers>=5.4.1",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.3",
    "nvidia-ml-py3>=7.352.0",
]

[tool.uv]
managed = true
